# Efficient-Superpixel-Segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
_layouts/: default.html
assets/css/: style.css
docs/: final.md  index.md  midterm.md  proposal.md
src/: trainer.py
src/data/: dataset_loader.py
src/models/: decoupled_superpixel_vit.py  feature_extractor.py  superpixel_associator.py  superpixel_classifier.py  superpixel_tokenizer.py
